syntax = "proto3";

option java_package = "grpc";
option java_multiple_files = true;

service TaskManagerService {
  rpc updateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc sendHeartBeat(HeartBeatRequest) returns (HeartBeatResponse);
}

service WorkerService {
  rpc sendTask(TaskRequest) returns (TaskResponse);
}

enum TaskStatus {
  PENDING = 0;
  COMPLETED = 1;
  QUEUED = 2;
  FAILED = 3;
}

message TaskRequest {
  string taskId = 1;
  string data = 2;
}

message TaskResponse {
  string taskId = 1;
  TaskStatus status = 2;
}

message UpdateTaskRequest {
  string taskId = 1;
  TaskStatus taskStatus = 2;
}

message UpdateTaskResponse {
  string taskId = 1;
  bool acknowledge = 2;
}

message HeartBeatRequest {
  uint64 workerId = 1;
  string hostname = 2;
  string port = 3;
}
message HeartBeatResponse {
  bool acknowledge = 1;
}
